<resources>
    <string name="app_name">AndroidKotlinTool</string>
    
    
    <string name="camera_confirm">확인</string>
    <string name="camera_cancel">취소</string>
    <string name="camera_normal">normal</string>
    <string name="camera_high">high</string>
    <string name="camera_delete">삭제</string>
    <string name="camera_gallery">갤러리</string>
    <string name="selected_image_count">%s / %s</string>
    
    <string name="arc_menu_support_center_title">지원센터</string>
    <string name="arc_menu_support_center_subtitle">지원센터를 통해 지원받고 방송하자!</string>
    
    <string name="arc_menu_bj_collection_title">BJ모아모아</string>
    <string name="arc_menu_community_title">커뮤니티</string>
    <string name="arc_menu_client_center_title">고객센터</string>
    <string name="arc_menu_event_title">이벤트</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
